--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   backend:
@@ -15,10 +15,13 @@ services:
   nginx:
     image: nginx:alpine
     container_name: blog-nginx
+    # volumes:
+    #   - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    #   - ./nginx/certs:/etc/nginx/certs:ro
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      # Mount your certs into the container
-      - ./nginx/certs:/etc/nginx/certs:ro
+      - /root/MaitAimlBlogAppBackend/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - /etc/letsencrypt/live/mait-aimldept-blogapp.live/fullchain.pem:/etc/nginx/certs/fullchain.pem:ro
+      - /etc/letsencrypt/live/mait-aimldept-blogapp.live/privkey.pem:/etc/nginx/certs/privkey.pem:ro
     ports:
       - "80:80"
       - "443:443"
