--- a/blog_app_frontend/.env
+++ b/blog_app_frontend/.env
@@ -1,3 +1,3 @@
 # HTTPS=true
-TINY_MCE_API_KEY="8nm03ok1hrybuha04rprdszsnk7mkhghzm8pyziucah8ih0x"
-BASE_URL="https://mait-aimldept-blogapp.live"
+REACT_APP_TINY_MCE_API_KEY="8nm03ok1hrybuha04rprdszsnk7mkhghzm8pyziucah8ih0x"
+REACT_APP_BASE_URL="https://mait-aimldept-blogapp.live"
