updated nginx config to add "Access-Control-Allow-Origin"

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,11 +22,21 @@ server {
         proxy_pass http://backend:4800; 
         proxy_http_version 1.1;
 
-        # The following headers are often needed for websockets or 
-        # just good practice for Node behind Nginx:
+        # WebSocket and connection headers
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+
+        # CORS headers
+        add_header Access-Control-Allow-Origin "https://mait-aiml-official-blogspace.netlify.app";
+        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE";
+        add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
+        add_header Access-Control-Allow-Credentials true;
+        
+        # Handle preflight OPTIONS request
+        if ($request_method = OPTIONS) {
+            return 204;
+        }
     }
 }
