--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,10 +29,10 @@ server {
         proxy_cache_bypass $http_upgrade;
 
         # CORS headers
-        add_header Access-Control-Allow-Origin "https://mait-aiml-official-blogspace.netlify.app";
-        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE";
-        add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
-        add_header Access-Control-Allow-Credentials true;
+        # add_header Access-Control-Allow-Origin "https://mait-aiml-official-blogspace.netlify.app";
+        # add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE";
+        # add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
+        # add_header Access-Control-Allow-Credentials true;
         
         # Handle preflight OPTIONS request
         if ($request_method = OPTIONS) {
