Made the branch development ready.
Happy Coding!!

--- a/blog_app_frontend/.env
+++ b/blog_app_frontend/.env
@@ -1,3 +1,5 @@
 # HTTPS=true
 REACT_APP_TINY_MCE_API_KEY="8nm03ok1hrybuha04rprdszsnk7mkhghzm8pyziucah8ih0x"
-REACT_APP_BASE_URL="https://mait-aimldept-blogapp.live"
+REACT_APP_BASE_URL="http://localhost:4800"
+# Production Backend Base URL: https://mait-aimldept-blogapp.live
+# Development Backend Base URL: http://localhost:4800
